fix(projectService): fix user role check
Signed-off-by: Gaurav Mishra <mishra.gaurav@siemens.com>