@@ -22,7 +22,6 @@ import org.apache.thrift.transport.TTransportException;
 import org.eclipse.sw360.datahandler.common.CommonUtils;
 import org.eclipse.sw360.datahandler.common.SW360Constants;
 import org.eclipse.sw360.datahandler.common.SW360Utils;
-import org.eclipse.sw360.datahandler.common.ThriftEnumUtils;
 import org.eclipse.sw360.datahandler.common.WrappedException.WrappedTException;
 import org.eclipse.sw360.datahandler.permissions.PermissionUtils;
 import org.eclipse.sw360.datahandler.thrift.AddDocumentRequestStatus;
@@ -69,14 +68,12 @@ import org.eclipse.sw360.rest.resourceserver.core.RestControllerHelper;
 import org.eclipse.sw360.rest.resourceserver.release.ReleaseController;
 import org.eclipse.sw360.rest.resourceserver.release.Sw360ReleaseService;
 import org.jetbrains.annotations.NotNull;
-import org.jose4j.json.internal.json_simple.JSONObject;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.rest.webmvc.ResourceNotFoundException;
 import org.springframework.hateoas.Link;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
@@ -91,7 +88,6 @@ import jakarta.servlet.http.HttpServletResponse;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
@@ -117,7 +113,6 @@ import java.util.stream.Collector;
 import java.util.stream.Collectors;
 
 import static com.google.common.base.Strings.nullToEmpty;
-import static org.eclipse.sw360.datahandler.common.CommonUtils.arrayToList;
 import static org.eclipse.sw360.datahandler.common.CommonUtils.getSortedMap;
 import static org.eclipse.sw360.datahandler.common.CommonUtils.isNullEmptyOrWhitespace;
 import static org.eclipse.sw360.datahandler.common.CommonUtils.nullToEmptyList;
@@ -1159,7 +1154,7 @@ public class Sw360ProjectService implements AwareOfRestServices<Project> {
 
     /**
      * From list of projects, filter projects based on their clearing state.
-     * 
+     *
      * @param projects      List of projects to filter
      * @param clearingState Map of clearing states to filter projects for
      * @return List of filtered projects.
@@ -1187,7 +1182,7 @@ public class Sw360ProjectService implements AwareOfRestServices<Project> {
 
     /**
      * Get my projects from the thrift client.
-     * 
+     *
      * @param user      User to get projects for
      * @param userRoles User roles to filter projects
      * @return List of projects
@@ -1200,7 +1195,7 @@ public class Sw360ProjectService implements AwareOfRestServices<Project> {
 
     /**
      * Get count of projects accessible by given user.
-     * 
+     *
      * @param sw360User User to get the count for.
      * @return Total count of projects accessible by user.
      * @throws TException
@@ -1219,7 +1214,7 @@ public class Sw360ProjectService implements AwareOfRestServices<Project> {
 
     /**
      * Import SPDX SBOM using the method on the thrift client.
-     * 
+     *
      * @param user                User uploading the SBOM
      * @param attachmentContentId Id of the attachment uploaded
      * @return RequestSummary
@@ -1232,7 +1227,7 @@ public class Sw360ProjectService implements AwareOfRestServices<Project> {
 
     /**
      * Import CycloneDX SBOM using the method on the thrift client.
-     * 
+     *
      * @param user                User uploading the SBOM
      * @param attachmentContentId Id of the attachment uploaded
      * @return RequestSummary
@@ -1246,7 +1241,7 @@ public class Sw360ProjectService implements AwareOfRestServices<Project> {
     /**
      * Get Projects are using release in dependencies
      * (enable.flexible.project.release.relationship = true)
-     * 
+     *
      * @param releaseId Id of release
      * @return List<Project>
      */
@@ -1260,7 +1255,7 @@ public class Sw360ProjectService implements AwareOfRestServices<Project> {
 
     /**
      * Count the number of projects are using the releases that has releaseIds
-     * 
+     *
      * @param releaseIds Ids of Releases
      * @return int Number of projects
      * @throws TException
@@ -1438,7 +1433,7 @@ public class Sw360ProjectService implements AwareOfRestServices<Project> {
         return requestStatus;
     }
 
-   public Set<String> verifyIfAttachmentsExist(String projectId, User user, Project project) throws TException {
+    public Set<String> verifyIfAttachmentsExist(String projectId, User user, Project project) throws TException {
         Set<String> missingAttachmentFilenames = new HashSet<>();
 
         Set<Attachment> attachments = project.getAttachments();
@@ -1539,7 +1534,7 @@ public class Sw360ProjectService implements AwareOfRestServices<Project> {
 
         Predicate<LicenseNameWithText> filterLicense = license -> (license.isSetObligationsAtProject()
                 && !(SW360Constants.LICENSE_NAME_UNKNOWN.equals(license.getLicenseName())
-                        || SW360Constants.NA.equalsIgnoreCase(license.getLicenseName())));
+                || SW360Constants.NA.equalsIgnoreCase(license.getLicenseName())));
 
         licenseInfoWithObligations.stream()
                 .sorted(Comparator.comparing(LicenseInfoParsingResult::getName, String.CASE_INSENSITIVE_ORDER))
@@ -1578,7 +1573,7 @@ public class Sw360ProjectService implements AwareOfRestServices<Project> {
         }
     }
 
-    public ProjectLink serveLinkedResourcesOfProjectInDependencyNetwork(String projectId, boolean transitive, User sw360User) throws TException{
+    public ProjectLink serveLinkedResourcesOfProjectInDependencyNetwork(String projectId, boolean transitive, User sw360User) throws TException {
         Project project = getProjectForUserById(projectId, sw360User);
         final Collection<ProjectLink> linkedProjects = (!transitive)
                 ? SW360Utils.getLinkedProjectsAsFlatList(project, false, new ThriftClients(), log, sw360User)
@@ -1596,34 +1591,37 @@ public class Sw360ProjectService implements AwareOfRestServices<Project> {
     }
 
     public RequestStatus addLicenseToLinkedReleases(String projectId, User sw360User)
-            throws TTransportException, TException {
-        if (PermissionUtils.isUserAtLeast(UserGroup.CLEARING_ADMIN, sw360User)) {
+            throws TException {
+        if (!PermissionUtils.isUserAtLeast(UserGroup.CLEARING_ADMIN, sw360User)) {
             throw new AccessDeniedException("Adding license info to releases is disabled for the current users.");
         }
 
+        ProjectService.Iface projectClient = getThriftProjectClient();
+        LicenseInfoService.Iface licenseInfoClient = new ThriftClients().makeLicenseInfoClient();
+        ComponentService.Iface componentClient = new ThriftClients().makeComponentClient();
+
+        Project project;
+
         try {
-            ProjectService.Iface projectClient = getThriftProjectClient();
-            LicenseInfoService.Iface licenseInfoClient = new ThriftClients().makeLicenseInfoClient();
-            ComponentService.Iface componentClient = new ThriftClients().makeComponentClient();
+            project = projectClient.getProjectById(projectId, sw360User);
+        } catch (SW360Exception e) {
+            throw new ResourceNotFoundException("Requested project not found.", e);
+        }
 
-            Project project = projectClient.getProjectById(projectId, sw360User);
-            if (project == null) {
-                log.error("Requested Project Not Found: " + projectId);
-                throw new ResourceNotFoundException("Project not available");
-            }
+        if (project == null) {
+            throw new ResourceNotFoundException("Requested project not found.");
+        }
 
+        try {
             Set<String> releaseIds = CommonUtils.getNullToEmptyKeyset(project.getReleaseIdToUsage());
             List<Release> releasesToUpdate = new ArrayList<>();
 
             for (String releaseId : releaseIds) {
                 Release release = componentClient.getReleaseById(releaseId, sw360User);
                 if (release == null) {
-                    log.error("Release with ID " + releaseId + " not found.");
+                    log.error("Release with ID {} not found.", releaseId);
                     continue;
                 }
-
-                Set<String> originalMainLicenses = release.getMainLicenseIds() == null ? new HashSet<>() : new HashSet<>(release.getMainLicenseIds());
-                Set<String> originalOtherLicenses = release.getOtherLicenseIds() == null ? new HashSet<>() : new HashSet<>(release.getOtherLicenseIds());
 
                 List<Attachment> approvedCliAttachments = SW360Utils.getApprovedClxAttachmentForRelease(release);
                 if (approvedCliAttachments.isEmpty()) {
@@ -1632,11 +1630,7 @@ public class Sw360ProjectService implements AwareOfRestServices<Project> {
 
                 boolean updated = false;
                 if (!approvedCliAttachments.isEmpty()) {
-                    updated = processSingleAttachment(approvedCliAttachments.get(0), release, licenseInfoClient, sw360User);
-                }
-
-                if (!updated && (!originalMainLicenses.equals(release.getMainLicenseIds()) || !originalOtherLicenses.equals(release.getOtherLicenseIds()))) {
-                    updated = true;
+                    updated = processSingleAttachment(approvedCliAttachments.getFirst(), release, licenseInfoClient, sw360User);
                 }
 
                 if (updated) {
@@ -1659,12 +1653,12 @@ public class Sw360ProjectService implements AwareOfRestServices<Project> {
             }
             throw new RuntimeException("SW360 API error: " + sw360Exp.getMessage(), sw360Exp);
         } catch (Exception e) {
-            throw new RuntimeException("Error processing linked releases for project: " + projectId, e);
+            throw new RuntimeException("Error processing linked releases for project: " + project.getId(), e);
         }
     }
 
     private boolean processSingleAttachment(Attachment attachment, Release release,
-            LicenseInfoService.Iface licenseInfoClient, User sw360User) throws TTransportException, TException {
+                                            LicenseInfoService.Iface licenseInfoClient, User sw360User) throws TException {
 
         String attachmentName = attachment.getFilename();
         Set<String> mainLicenses = new HashSet<>();
